<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/viewn"
    tools:context=".CalPapers">


    <CheckBox
        android:id="@+id/cb_4"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="192dp"
        android:text="@string/cb_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_3" />

    <CheckBox
        android:id="@+id/cb_1"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="192dp"
        android:text="@string/cb_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_viewpaper1" />

    <CheckBox
        android:id="@+id/cb_2"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="192dp"
        android:text="@string/cb_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_1" />

    <CheckBox
        android:id="@+id/cb_3"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="192dp"
        android:text="@string/cb_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_2" />

    <TextView
        android:id="@+id/tv_viewpaper1"
        android:layout_width="261dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_viewpaper1"
        android:textColor="#1E1C1C"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/bt_total"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#3949AB"
        android:text="@string/bt_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_4" />

    <TextView
        android:id="@+id/tv_totalp"
        android:layout_width="81dp"
        android:layout_height="22dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="42dp"
        android:text="@string/tv_totalp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_total" />

    <EditText
        android:id="@+id/et_23"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_23"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_totalp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_order"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#3949AB"
        android:text="DONE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_23" />

</androidx.constraintlayout.widget.ConstraintLayout>