<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluee"
    tools:context=".add_pay">

  <TextView
      android:id="@+id/Add_pay"
      android:layout_width="257dp"
      android:layout_height="58dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="12dp"
      android:text="@string/Add_pay"
      android:textAlignment="center"
      android:textColor="@color/purple_500"
      android:textColorHighlight="@color/white"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  <EditText
      android:id="@+id/Card_NO"
      android:layout_width="227dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/Card_NO"
      android:inputType="number"
      android:textColor="@color/black"
      android:textColorHint="@android:color/background_dark"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

  <EditText
      android:id="@+id/CVV_Card"
      android:layout_width="223dp"
      android:layout_height="48dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/CVV_Card"
      android:inputType="number"
      android:textColorHint="@android:color/background_dark"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_stuID" />

  <EditText
      android:id="@+id/Expire_date"
      android:layout_width="222dp"
      android:layout_height="45dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/Expire_date"
      android:inputType="date"
      android:minHeight="48dp"
      android:textColorHint="@android:color/background_dark"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/CVV_Card"
      tools:ignore="TouchTargetSizeCheck" />

  <Button
      android:id="@+id/btn_addp"
      android:layout_width="149dp"
      android:layout_height="66dp"
      android:layout_marginStart="124dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@android:color/holo_red_dark"
      android:text="@string/btn_addp"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_Subject" />

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="227dp"
      android:layout_height="92dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="6dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Card_type">

    <RadioButton
        android:id="@+id/Visa_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/Visa_card"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="normal" />

    <RadioButton
        android:id="@+id/master_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/master_card"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="normal"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

  </RadioGroup>

  <TextView
      android:id="@+id/Card_type"
      android:layout_width="133dp"
      android:layout_height="35dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/Card_type"
      android:textColor="@android:color/background_dark"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Add_pay" />

  <EditText
      android:id="@+id/et_stuname"
      android:layout_width="227dp"
      android:layout_height="54dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/et_stuname"
      android:inputType="textPersonName"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Card_NO" />

  <EditText
      android:id="@+id/et_stuID"
      android:layout_width="222dp"
      android:layout_height="58dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/et_stuID"
      android:inputType="textPersonName"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_stuname" />

  <EditText
      android:id="@+id/et_Subject"
      android:layout_width="278dp"
      android:layout_height="47dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="6dp"
      android:ems="10"
      android:hint="@string/et_Subject"
      android:inputType="textPersonName"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:textSize="20sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Expire_date"
      tools:ignore="TouchTargetSizeCheck" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="277dp"
      android:layout_height="294dp"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="340dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/Card_NO"
      app:layout_constraintTop_toBottomOf="@+id/Add_pay"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/ges" />


</androidx.constraintlayout.widget.ConstraintLayout>